# synthetic-health-data-pipeline

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: config.yaml
docs/: data_dictionary.md  decision_log.md  project_statement.md
notebooks/: eda.ipynb
outputs/: ctgan_loss.csv  ctgan_metadata.json  results.csv
src/: check_cross_language_compatibility.py  column_utils.py  config.py  evaluate_synthetic.py  generate_ctgan.py  generate_dp.py  generate_low_fidelity.py  generate_synthpop.R  io_utils.py  prepare_dataset.py
tests/: test_column_utils.py  test_config.py  test_evaluate_synthetic.py  test_generate_ctgan.py  test_generate_dp.py  test_generate_low_fidelity.py  test_io_utils.py  test_prepare_dataset.py
tests/testthat/: test-generate_synthpop.R
